cabal-version:      3.0
name:               ro
version:            0.1.0.0
synopsis:           The Ro Programming Language
homepage:           https://ro-lang.org/
license:            MIT
license-file:       LICENSE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac@ih1d.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.20.2.0
		    , parsec
    hs-source-dirs:   src
    default-language: GHC2024

executable ro
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        ro

    hs-source-dirs:   app
    default-language: GHC2024
